a bunch of fixes

--- a/Run7/FitsHeader.ipynb
+++ b/Run7/FitsHeader.ipynb
@@ -2,34 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "6ccbcf86-2eb7-462f-9dc7-6fc1ca1b36fc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-14T22:16:51.883365Z",
-     "iopub.status.busy": "2024-10-14T22:16:51.882758Z",
-     "iopub.status.idle": "2024-10-14T22:16:51.885427Z",
-     "shell.execute_reply": "2024-10-14T22:16:51.885078Z",
-     "shell.execute_reply.started": "2024-10-14T22:16:51.883347Z"
+     "iopub.execute_input": "2024-10-14T22:24:41.218359Z",
+     "iopub.status.busy": "2024-10-14T22:24:41.218237Z",
+     "iopub.status.idle": "2024-10-14T22:24:41.220343Z",
+     "shell.execute_reply": "2024-10-14T22:24:41.219962Z",
+     "shell.execute_reply.started": "2024-10-14T22:24:41.218346Z"
     }
    },
    "outputs": [],
    "source": [
     "expid='MC_C_20241011_001320'\n",
-    "detector=10"
+    "sensor='R10_S00'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "bddb2c1e-db05-462c-9009-58e8e923bc55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-14T22:16:52.130673Z",
-     "iopub.status.busy": "2024-10-14T22:16:52.130287Z",
-     "iopub.status.idle": "2024-10-14T22:16:52.132685Z",
-     "shell.execute_reply": "2024-10-14T22:16:52.132303Z",
-     "shell.execute_reply.started": "2024-10-14T22:16:52.130661Z"
+     "iopub.execute_input": "2024-10-14T22:24:41.220957Z",
+     "iopub.status.busy": "2024-10-14T22:24:41.220843Z",
+     "iopub.status.idle": "2024-10-14T22:24:42.014473Z",
+     "shell.execute_reply": "2024-10-14T22:24:42.014037Z",
+     "shell.execute_reply.started": "2024-10-14T22:24:41.220946Z"
     }
    },
    "outputs": [],
@@ -39,33 +39,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "45002735-c850-40bc-853a-4655982095b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-14T22:16:52.312156Z",
-     "iopub.status.busy": "2024-10-14T22:16:52.311862Z",
-     "iopub.status.idle": "2024-10-14T22:16:52.437412Z",
-     "shell.execute_reply": "2024-10-14T22:16:52.436966Z",
-     "shell.execute_reply.started": "2024-10-14T22:16:52.312141Z"
+     "iopub.execute_input": "2024-10-14T22:24:42.015108Z",
+     "iopub.status.busy": "2024-10-14T22:24:42.014970Z",
+     "iopub.status.idle": "2024-10-14T22:24:42.534980Z",
+     "shell.execute_reply": "2024-10-14T22:24:42.534564Z",
+     "shell.execute_reply.started": "2024-10-14T22:24:42.015094Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"margin: 0.1em;\n",
+       "padding-left: 0.25em;\n",
+       "border-left-style: solid;\n",
+       "font-family: var(--jp-code-font-family);\n",
+       "font-size: var(--jp-code-font-size);\n",
+       "line-height: var(--jp-code-line-height);\n",
+       "\"><span style=\"color: var(--jp-warn-color2)\">botocore.credentials</span> <span style=\"color: var(--jp-info-color0)\">INFO</span>: Found credentials in shared credentials file: /home/y/youtsumi/.lsst/aws-credentials.ini</pre>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "butler = Butler('embargo_new', collections=['LSSTCam/raw/all', 'LSSTCam/calib/unbounded'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "id": "b9f45b85-0529-4349-94d4-03bf818535d0",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-10-14T22:24:42.536156Z",
+     "iopub.status.busy": "2024-10-14T22:24:42.536016Z",
+     "iopub.status.idle": "2024-10-14T22:24:42.554227Z",
+     "shell.execute_reply": "2024-10-14T22:24:42.553880Z",
+     "shell.execute_reply.started": "2024-10-14T22:24:42.536142Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "detector=list(butler.registry.queryDimensionRecords(\"detector\",instrument='LSSTCam',where=f\"detector.full_name='{sensor}'\"))[0].id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "5c0de662-7a41-462a-830d-acc7e7e3f951",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-14T22:16:59.478095Z",
-     "iopub.status.busy": "2024-10-14T22:16:59.477496Z",
-     "iopub.status.idle": "2024-10-14T22:16:59.500674Z",
-     "shell.execute_reply": "2024-10-14T22:16:59.500273Z",
-     "shell.execute_reply.started": "2024-10-14T22:16:59.478080Z"
+     "iopub.execute_input": "2024-10-14T22:24:42.580920Z",
+     "iopub.status.busy": "2024-10-14T22:24:42.580789Z",
+     "iopub.status.idle": "2024-10-14T22:24:44.152022Z",
+     "shell.execute_reply": "2024-10-14T22:24:44.151557Z",
+     "shell.execute_reply.started": "2024-10-14T22:24:42.580907Z"
     }
    },
    "outputs": [],
@@ -75,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "ddae890e-8cda-41c2-be8e-154c3105101f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-14T22:17:33.998607Z",
-     "iopub.status.busy": "2024-10-14T22:17:33.998132Z",
-     "iopub.status.idle": "2024-10-14T22:17:34.001265Z",
-     "shell.execute_reply": "2024-10-14T22:17:34.000961Z",
-     "shell.execute_reply.started": "2024-10-14T22:17:33.998592Z"
+     "iopub.execute_input": "2024-10-14T22:24:44.152872Z",
+     "iopub.status.busy": "2024-10-14T22:24:44.152679Z",
+     "iopub.status.idle": "2024-10-14T22:24:44.155716Z",
+     "shell.execute_reply": "2024-10-14T22:24:44.155336Z",
+     "shell.execute_reply.started": "2024-10-14T22:24:44.152858Z"
     }
    },
    "outputs": [
@@ -216,15 +253,15 @@
       "// CCD Manufacturer\n",
       "CCD_TYPE = \"3800C\"\n",
       "// CCD Model Number\n",
-      "CCDSLOT = \"S01\"\n",
+      "CCDSLOT = \"S00\"\n",
       "// The CCD Slot\n",
-      "RAFTBAY = \"R02\"\n",
+      "RAFTBAY = \"R10\"\n",
       "// The RAFT Bay\n",
       "FIRMWARE = \"3139500e\"\n",
       "// DAQ firmware version (Hex)\n",
       "PLATFORM = \"lsstcam\"\n",
       "// DAQ platform version\n",
-      "CONTNUM = \"189223f9\"\n",
+      "CONTNUM = \"1891f6a9\"\n",
       "// REB serial # (Hex)\n",
       "DAQVERS = \"R5-V10.8 2024-09-04T15:22:30Z (d2bcf37f)\"\n",
       "// DAQ version\n",
@@ -238,13 +275,13 @@
       "// Sequencer file name\n",
       "SEQCKSUM = \"701508181\"\n",
       "// Checksum of Sequencer\n",
-      "LSST_NUM = \"ITL-3800C-261\"\n",
+      "LSST_NUM = \"ITL-3800C-466\"\n",
       "// LSST Assigned CCD Number\n",
-      "CCD_SERN = \"23026\"\n",
+      "CCD_SERN = \"25570\"\n",
       "// Manufacturers? CCD Serial Number\n",
-      "REBNAME = \"LCA-13574-019\"\n",
+      "REBNAME = \"LCA-13574-011\"\n",
       "// LSST Assigned Name REB name\n",
-      "RAFTNAME = \"LCA-11021_RTM-013\"\n",
+      "RAFTNAME = \"LCA-11021_RTM-023\"\n",
       "// LSST Assigned Raft name\n",
       "FPVERS = \"1.2.8\"\n",
       "// The focal-plane version number\n",
@@ -280,7 +317,7 @@
       "// [arcsec] Seeing from FWHM DIMM measurement\n",
       "HEADVER = 2\n",
       "// Version number of header\n",
-      "FILENAME = \"MC_C_20241011_001320_R02_S01.fits\"\n",
+      "FILENAME = \"MC_C_20241011_001320_R10_S00.fits\"\n",
       "// Original name of the file\n",
       "STUTTER ROWS = <Unknown>\n",
       "// The number of row shifts per stutter\n",
@@ -331,73 +368,73 @@
       "TFIELDS = 0\n",
       "// Number of table fields\n",
       "COMMENT = \"---- Checksums ----\"\n",
-      "CHECKSUM = \"3KrZAIoW5IoWAIoW\"\n",
+      "CHECKSUM = \"9AEiG4EZ99EfE9EZ\"\n",
       "// checksum for the current HDU\n",
       "EXTNAME = \"REB_COND\"\n",
       "// Name of the extension\n",
-      "TEMP1 = 8.3750000000000\n",
+      "TEMP1 = 4.0000000000000\n",
       "// REB Board temperature 1\n",
-      "TEMP2 = 8.5000000000000\n",
+      "TEMP2 = 4.0000000000000\n",
       "// REB Board temperature 2\n",
-      "TEMP3 = -4.0625000000000\n",
+      "TEMP3 = -8.8750000000000\n",
       "// REB Board temperature 3\n",
-      "TEMP4 = 0.43750000000000\n",
+      "TEMP4 = -3.6875000000000\n",
       "// REB Board temperature 4\n",
-      "TEMP5 = -1.0625000000000\n",
+      "TEMP5 = -5.4375000000000\n",
       "// REB Board temperature 5\n",
-      "TEMP6 = 1.0000000000000\n",
+      "TEMP6 = -3.2500000000000\n",
       "// REB Board temperature 6\n",
-      "TEMP7 = -4.3125000000000\n",
+      "TEMP7 = -9.3750000000000\n",
       "// REB Board temperature 7\n",
-      "TEMP8 = 0.062500000000000\n",
+      "TEMP8 = -4.0000000000000\n",
       "// REB Board temperature 8\n",
-      "TEMP9 = -1.3750000000000\n",
+      "TEMP9 = -5.6875000000000\n",
       "// REB Board temperature 9\n",
-      "TEMP10 = 0.68750000000000\n",
+      "TEMP10 = -3.2500000000000\n",
       "// REB Board temperature 10\n",
-      "ATEMPU = -8.9027600000000\n",
+      "ATEMPU = -11.954500000000\n",
       "// ASPIC 0 upper temperature\n",
-      "ATEMPL = -6.2869700000000\n",
+      "ATEMPL = -9.1207400000000\n",
       "// ASPIC 0 lower temperature\n",
-      "CCDTEMP = -101.83200000000\n",
+      "CCDTEMP = -102.35000000000\n",
       "// CCD temperature\n",
-      "RTDTEMP = -102.93100000000\n",
+      "RTDTEMP = -102.68400000000\n",
       "// RTD temperature\n",
       "DIGPS_V = 5.7500000000000\n",
       "// REB Digital PS voltage\n",
-      "DIGPS_I = 701.50000000000\n",
+      "DIGPS_I = 672.00000000000\n",
       "// REB Digital PS current\n",
-      "ANAPS_V = 8.0750000000000\n",
+      "ANAPS_V = 8.0500000000000\n",
       "// REB Analog PS voltage\n",
-      "ANAPS_I = 570.50000000000\n",
+      "ANAPS_I = 575.75000000000\n",
       "// REB Analog PS current\n",
-      "CLKHPS_V = 15.350000000000\n",
+      "CLKHPS_V = 15.400000000000\n",
       "// REB CLK_H PS voltage\n",
-      "CLKHPS_I = 106.50000000000\n",
+      "CLKHPS_I = 105.91700000000\n",
       "// REB CLK_H PS current\n",
-      "CLKLPS_V = 13.650000000000\n",
+      "CLKLPS_V = 13.675000000000\n",
       "// REB CLK_L PS voltage\n",
-      "CLKLPS_I = 54.875000000000\n",
+      "CLKLPS_I = 55.375000000000\n",
       "// REB CLK_L PS current\n",
-      "ODPS_V = 39.025000000000\n",
+      "ODPS_V = 38.700000000000\n",
       "// REB OD PS voltage\n",
-      "ODPS_I = 87.916700000000\n",
+      "ODPS_I = 88.166700000000\n",
       "// REB OD PS current\n",
-      "HTRPS_V = 3.2557500000000\n",
+      "HTRPS_V = 3.6674100000000\n",
       "// REB Heater PS voltage\n",
-      "HTRPS_W = 0.70169300000000\n",
+      "HTRPS_W = 0.89035700000000\n",
       "// REB Heater PS power\n",
-      "PCKU_V = 1.9926700000000\n",
+      "PCKU_V = 2.0000000000000\n",
       "// REB clock rails PCK_U Voltage\n",
-      "PCKL_V = -8.0073300000000\n",
+      "PCKL_V = -8.0000000000000\n",
       "// REB clock rails PCK_L Voltage\n",
       "SCKU_V = 4.9963400000000\n",
       "// REB clock rails SCK_U Voltage\n",
-      "SCKL_V = -5.0036600000000\n",
+      "SCKL_V = -4.9963400000000\n",
       "// REB clock rails SCK_L Voltage\n",
-      "RGU_V = 8.0073300000000\n",
+      "RGU_V = 8.0000000000000\n",
       "// REB clock rails RG_U Voltage\n",
-      "RGL_V = -2.0000000000000\n",
+      "RGL_V = -2.0073300000000\n",
       "// REB clock rails RG_L Voltage\n",
       "ODV = 26.915800000000\n",
       "// REB bias OD voltage\n",
@@ -405,9 +442,9 @@
       "// REB bias OG voltage\n",
       "RDV = 13.001200000000\n",
       "// REB bias RD voltage\n",
-      "GDV = 19.985300000000\n",
+      "GDV = 15.015900000000\n",
       "// REB bias GD voltage\n",
-      "GDP = 20.000000000000\n",
+      "GDP = 15.000000000000\n",
       "// REB config bias GD (requested)\n",
       "RDP = 13.000000000000\n",
       "// REB config bias RD (requested)\n",
@@ -453,80 +490,80 @@
       "// REB HVBias Switch state\n",
       "IDLEFLSH = 0\n",
       "// IDLE FLUSH setting\n",
-      "POWER = 17.037000000000\n",
+      "POWER = 17.068300000000\n",
       "// Total REB PS power\n",
       "DIGVB = 6.4000000000000\n",
       "// REB PS Digi Voltage before LDO\n",
-      "DIGIB = 719.32000000000\n",
+      "DIGIB = 692.37000000000\n",
       "// REB PS Digi Current before LDO\n",
-      "DIGVA = 6.0684800000000\n",
+      "DIGVA = 6.0332800000000\n",
       "// REB PS Digi Voltage after LDO\n",
-      "DIGIA = 619.75700000000\n",
+      "DIGIA = 650.53500000000\n",
       "// REB PS Digi Current after LDO\n",
-      "DIGVS = 6.0085000000000\n",
+      "DIGVS = 6.0481500000000\n",
       "// REB PS Digi Voltage after Switch\n",
       "ANAVB = 9.0250000000000\n",
       "// REB PS Ana Voltage before LDO\n",
-      "ANAIB = 564.00000000000\n",
+      "ANAIB = 565.41000000000\n",
       "// REB PS Ana Current before LDO\n",
-      "ANAVA = 8.3001600000000\n",
+      "ANAVA = 8.2755200000000\n",
       "// REB PS Ana Voltage after LDO\n",
       "ANAIA = 569.13600000000\n",
       "// REB PS Ana  Current after LDO\n",
-      "ANAIS = 8.4332500000000\n",
+      "ANAIS = 8.3753000000000\n",
       "// REB PS Ana Voltage after Switch\n",
-      "ODVB = 40.400000000000\n",
+      "ODVB = 40.875000000000\n",
       "// REB PS OD Voltage before LDO\n",
-      "ODIB = 93.764600000000\n",
+      "ODIB = 93.992000000000\n",
       "// REB PS OD Current before LDO\n",
-      "ODVA = 38.748600000000\n",
+      "ODVA = 38.645600000000\n",
       "// REB PS OD Voltage after LDO\n",
-      "ODVA2 = 39.125000000000\n",
+      "ODVA2 = 38.775000000000\n",
       "// REB PS OD Voltage after LDO2\n",
-      "ODIA = 90.050400000000\n",
+      "ODIA = 89.974600000000\n",
       "// REB PS OD Current after LDO\n",
-      "ODVS = 39.263600000000\n",
+      "ODVS = 38.728000000000\n",
       "// REB PS OD Voltage after Switch\n",
       "CKHVB = 16.300000000000\n",
       "// REB PS Clk HI Voltage before LDO\n",
-      "CKHIB = 96.222000000000\n",
+      "CKHIB = 94.958000000000\n",
       "// REB PS Clk HI Current before LDO\n",
-      "CKHVA = 15.327000000000\n",
+      "CKHVA = 15.313900000000\n",
       "// REB PS Clk HI Voltage after LDO\n",
-      "CKHIA = 43.180000000000\n",
+      "CKHIA = 41.820000000000\n",
       "// REB PS Clk HI Current after LDO\n",
-      "CKHVS = 15.324000000000\n",
+      "CKHVS = 15.474000000000\n",
       "// REB PS Clk HI Voltage after Switch\n",
-      "CKLVB = 14.375000000000\n",
+      "CKLVB = 14.525000000000\n",
       "// REB PS Clk LO Voltage before LDO\n",
-      "CKLIB = 40.750000000000\n",
+      "CKLIB = 41.000000000000\n",
       "// REB PS Clk LO Current before LDO\n",
-      "CKLVA = 0.65824000000000\n",
+      "CKLVA = 0.78848000000000\n",
       "// REB PS Clk LO Voltage after LDO\n",
-      "CKLV2 = 13.691800000000\n",
+      "CKLV2 = 13.686500000000\n",
       "// REB PS Clk LO Voltage after LDO2\n",
-      "CKLIA = 39.000000000000\n",
+      "CKLIA = 39.250000000000\n",
       "// REB PS Clk LO Current after LDO\n",
-      "CKLVS = 14.024600000000\n",
+      "CKLVS = 13.874700000000\n",
       "// REB PS Clk LO Voltage after Switch\n",
       "HTRVB = 12.275000000000\n",
       "// REB PS Clk Heater Voltage before LDO\n",
-      "HTRIB = 196.39400000000\n",
+      "HTRIB = 219.93600000000\n",
       "// REB PS Clk Heater Current before LDO\n",
-      "HTRVA = 11.830900000000\n",
+      "HTRVA = 11.667400000000\n",
       "// REB PS Clk Heater Voltage after LDO\n",
-      "HTRIA = 489.99900000000\n",
+      "HTRIA = 18.174000000000\n",
       "// REB PS Clk Heater Current after LDO\n",
-      "HTRVAS = 12.072000000000\n",
+      "HTRVAS = 11.724000000000\n",
       "// REB PS Clk Heater Voltage after Switch\n",
-      "BSSVBS = 50.000000000000\n",
+      "BSSVBS = 50.025000000000\n",
       "// REB PS HV Bias Voltage before Switch\n",
-      "BSSIBS = 0.078312000000000\n",
+      "BSSIBS = 0.077559000000000\n",
       "// REB PS HV Bias Current before Switch\n",
       "DATASUM = \"0\"\n",
       "// checksum of the data records\n",
       "HIERARCH ASTRO METADATA FIX MODIFIED = 0\n",
-      "HIERARCH ASTRO METADATA FIX DATE = \"2024-10-14T22:16:59.499158\"\n",
+      "HIERARCH ASTRO METADATA FIX DATE = \"2024-10-14T22:24:44.149942\"\n",
       "\n"
      ]
     }
