--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -140,7 +140,7 @@
     "            record.physical_filter,\n",
     "            nimage,\n",
     "            f'<a href=https://usdf-rsp-dev.slac.stanford.edu/times-square/github/lsst/CameraTimesSquare/Run7/CheckPDTraces?exposure={record.id} target=\"_blank\" >PD</a>' if hasPD else \"\",\n",
-    "            f'<a href=https://usdf-rsp-dev.slac.stanford.edu/times-square/github/lsst/CameraTimesSquare/Run7/FitsHeader?expid={record.id}&detector={detector} target=\"_blank\" >meta</a>',    \n",
+    "            f'<a href=https://usdf-rsp-dev.slac.stanford.edu/times-square/github/lsst/CameraTimesSquare/Run7/FitsHeader?expid={record.obs_id}&detector={detector} target=\"_blank\" >meta</a>',    \n",
     "                     )\n",
     "            for [id,record,nimage, hasPD] in exposureList ]\n",
     "            )"
