Adding parameter cells (I think)

--- a/operations/CCS to EFD communication.ipynb
+++ b/operations/CCS to EFD communication.ipynb
@@ -11,7 +11,27 @@
     "from lsst.summit.utils.efdUtils import makeEfdClient\n",
     "from astropy.time import Time,TimeDelta\n",
     "import os\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "137cef0b-3206-432e-af90-8545ebb9c3a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = \"2025-05-01\"\n",
+    "duration = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df30c980-8abf-4a78-ae36-62d559e3e350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "efd_client = makeEfdClient()\n",
     "mtcamera_info = ComponentInfo(\"MTCamera\", \"sal\")\n",
     "\n",
