Updating parameter cell

--- a/operations/CCS to EFD communication.ipynb
+++ b/operations/CCS to EFD communication.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "137cef0b-3206-432e-af90-8545ebb9c3a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = \"2025-05-01\"\n",
+    "duration = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b8a7182a-819d-41e0-b93f-4dfcd73ff406",
    "metadata": {},
    "outputs": [],
@@ -10,19 +21,7 @@
     "from lsst.ts.xml.component_info import ComponentInfo\n",
     "from lsst.summit.utils.efdUtils import makeEfdClient\n",
     "from astropy.time import Time,TimeDelta\n",
-    "import os\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "137cef0b-3206-432e-af90-8545ebb9c3a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start = \"2025-05-01\"\n",
-    "duration = 1"
+    "import os"
    ]
   },
   {
