--- a/Run7/ImageCount.ipynb
+++ b/Run7/ImageCount.ipynb
@@ -6,11 +6,11 @@
    "id": "f904108d-417c-4ef1-999b-d652ab3be11e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-11T18:08:55.719659Z",
-     "iopub.status.busy": "2025-07-11T18:08:55.719435Z",
-     "iopub.status.idle": "2025-07-11T18:08:55.724128Z",
-     "shell.execute_reply": "2025-07-11T18:08:55.723732Z",
-     "shell.execute_reply.started": "2025-07-11T18:08:55.719633Z"
+     "iopub.execute_input": "2025-07-11T18:33:59.010312Z",
+     "iopub.status.busy": "2025-07-11T18:33:59.010034Z",
+     "iopub.status.idle": "2025-07-11T18:33:59.015614Z",
+     "shell.execute_reply": "2025-07-11T18:33:59.013053Z",
+     "shell.execute_reply.started": "2025-07-11T18:33:59.010272Z"
     }
    },
    "outputs": [],
@@ -24,11 +24,11 @@
    "id": "20f85d37-8953-4367-b252-b4ca02a16104",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-11T18:08:55.724737Z",
-     "iopub.status.busy": "2025-07-11T18:08:55.724594Z",
-     "iopub.status.idle": "2025-07-11T18:08:56.753345Z",
-     "shell.execute_reply": "2025-07-11T18:08:56.752854Z",
-     "shell.execute_reply.started": "2025-07-11T18:08:55.724724Z"
+     "iopub.execute_input": "2025-07-11T18:33:59.018251Z",
+     "iopub.status.busy": "2025-07-11T18:33:59.018109Z",
+     "iopub.status.idle": "2025-07-11T18:34:00.344662Z",
+     "shell.execute_reply": "2025-07-11T18:34:00.344170Z",
+     "shell.execute_reply.started": "2025-07-11T18:33:59.018236Z"
     }
    },
    "outputs": [],
@@ -39,34 +39,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "b6ca6a37-e2b8-4dda-ad32-5b3397bfa7fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-11T18:32:54.857017Z",
-     "iopub.status.busy": "2025-07-11T18:32:54.856683Z",
-     "iopub.status.idle": "2025-07-11T18:32:58.104360Z",
-     "shell.execute_reply": "2025-07-11T18:32:58.103769Z",
-     "shell.execute_reply.started": "2025-07-11T18:32:54.857000Z"
+     "iopub.execute_input": "2025-07-11T18:34:00.348219Z",
+     "iopub.status.busy": "2025-07-11T18:34:00.347934Z",
+     "iopub.status.idle": "2025-07-11T18:34:04.364678Z",
+     "shell.execute_reply": "2025-07-11T18:34:04.364087Z",
+     "shell.execute_reply.started": "2025-07-11T18:34:00.348203Z"
     }
    },
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<pre style=\"margin: 0.1em;\n",
+       "padding-left: 0.25em;\n",
+       "border-left-style: solid;\n",
+       "font-family: var(--jp-code-font-family);\n",
+       "font-size: var(--jp-code-font-size);\n",
+       "line-height: var(--jp-code-line-height);\n",
+       "\"><span style=\"color: var(--jp-warn-color2)\">botocore.credentials</span> <span style=\"color: var(--jp-info-color0)\">INFO</span>: Found credentials in shared credentials file: /home/y/youtsumi/.lsst/aws-credentials.ini</pre>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image count in butler since 20250415 by 2025-07-11 18:32:57.876903 is 49959\n",
-      "N(focus     )=        122, (       122)\n",
+      "Image count in butler since 20250415 by 2025-07-11 18:34:04.182677 is 49959\n",
       "N(science   )=      13612, (     13589)\n",
-      "N(test      )=          1, (         0)\n",
-      "N(bias      )=       8966, (         4)\n",
-      "N(dark      )=       3852, (         0)\n",
-      "N(engtest   )=        171, (       164)\n",
       "N(flat      )=       9066, (       313)\n",
       "N(unknown   )=        404, (         0)\n",
+      "N(engtest   )=        171, (       164)\n",
+      "N(bias      )=       8966, (         4)\n",
+      "N(focus     )=        122, (       122)\n",
       "N(stuttered )=          6, (         0)\n",
-      "N(acq       )=      12323, (     12273)\n",
       "N(cwfs      )=       1436, (      1436)\n",
+      "N(test      )=          1, (         0)\n",
+      "N(dark      )=       3852, (         0)\n",
+      "N(acq       )=      12323, (     12273)\n",
       "Number in the parensis is with the can_see_sky=True condition\n"
      ]
     }
@@ -96,42 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "f4f5d2ec-f2ea-4dad-960f-87b497f17558",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-07-11T18:19:12.172104Z",
-     "iopub.status.busy": "2025-07-11T18:19:12.171937Z",
-     "iopub.status.idle": "2025-07-11T18:19:12.180061Z",
-     "shell.execute_reply": "2025-07-11T18:19:12.179622Z",
-     "shell.execute_reply.started": "2025-07-11T18:19:12.172087Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acq', 'bias', 'cwfs', 'engtest', 'flat', 'focus', 'science'}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set([ exp[1].observation_type for exp in exposureList ])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "7441c94a-a633-45cd-9e9e-d5322f290f03",
+   "id": "367924b1-f5b3-4ce6-a045-1c204854bb0b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "                    exposure.observation_reason not in ('bias','dark') and\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
