--- a/operations/CCS to EFD communication.ipynb
+++ b/operations/CCS to EFD communication.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "137cef0b-3206-432e-af90-8545ebb9c3a9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-08-20T23:07:10.181130Z",
+     "iopub.status.busy": "2025-08-20T23:07:10.180991Z",
+     "iopub.status.idle": "2025-08-20T23:07:10.183613Z",
+     "shell.execute_reply": "2025-08-20T23:07:10.183218Z",
+     "shell.execute_reply.started": "2025-08-20T23:07:10.181112Z"
+    }
+   },
    "outputs": [],
    "source": [
     "start = \"2025-05-01\"\n",
@@ -13,9 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b8a7182a-819d-41e0-b93f-4dfcd73ff406",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-08-20T23:07:10.184404Z",
+     "iopub.status.busy": "2025-08-20T23:07:10.184264Z",
+     "iopub.status.idle": "2025-08-20T23:07:26.036838Z",
+     "shell.execute_reply": "2025-08-20T23:07:26.036340Z",
+     "shell.execute_reply.started": "2025-08-20T23:07:10.184389Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from lsst.ts.xml.component_info import ComponentInfo\n",
@@ -26,10 +42,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "df30c980-8abf-4a78-ae36-62d559e3e350",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-08-20T23:07:26.038748Z",
+     "iopub.status.busy": "2025-08-20T23:07:26.037853Z",
+     "iopub.status.idle": "2025-08-20T23:07:26.902050Z",
+     "shell.execute_reply": "2025-08-20T23:07:26.901237Z",
+     "shell.execute_reply.started": "2025-08-20T23:07:26.038711Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: TimeDeltaMissingUnitWarning: Numerical value without unit or explicit format passed to TimeDelta, assuming days [astropy.time.core]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"margin: 0.1em;\n",
+       "padding-left: 0.25em;\n",
+       "border-left-style: solid;\n",
+       "font-family: var(--jp-code-font-family);\n",
+       "font-size: var(--jp-code-font-size);\n",
+       "line-height: var(--jp-code-line-height);\n",
+       "\"><span style=\"color: var(--jp-warn-color2)\">astroquery</span> <span style=\"color: var(--jp-warn-color0)\">WARNING</span>: TimeDeltaMissingUnitWarning: Numerical value without unit or explicit format passed to TimeDelta, assuming days</pre>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "483 had no topic or topic contained no data.\n",
+      "0 queries returned data.\n",
+      "0 queries returned no data\n"
+     ]
+    }
+   ],
    "source": [
     "efd_client = makeEfdClient()\n",
     "mtcamera_info = ComponentInfo(\"MTCamera\", \"sal\")\n",
@@ -84,6 +143,14 @@
     "os.remove('./missing_data.txt')\n",
     "os.remove('./missing_topic.txt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05ea86d4-c513-4045-a08f-af7ecb2ed68e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -102,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
