--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -122,7 +122,7 @@
     "            record.exposure_time,\n",
     "            record.physical_filter,\n",
     "            nimage,\n",
-    "            f'<a href=https://usdf-rsp.slac.stanford.edu/times-square/github/lsst/CameraTimesSquare/Run7/GuiderData?expid={record.obs_id}&sensor={guidersensor}&ts_hide_code=1>Guider</a>',\n",
+    "            f'<a href=https://usdf-rsp.slac.stanford.edu/times-square/github/lsst/CameraTimesSquare/Run7/GuiderData?expid={record.obs_id}&sensor={guidersensor}&ts_hide_code=1 target=\"_blank\">Guider</a>',\n",
     "            f'<a href=https://usdf-rsp.slac.stanford.edu/times-square/github/lsst/CameraTimesSquare/Run7/FitsHeader?expid={record.obs_id}&detector={sensor} target=\"_blank\" >meta</a>',    \n",
     "                     )\n",
     "            for [id,record,nimage, guider] in exposureList ]\n",
