changed the default time interval

--- a/operations/CryoParameters.ipynb
+++ b/operations/CryoParameters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "de582b32",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "t_end = 'Now'\n",
     "duration_in_day = 30\n",
     "figformat = 'retina'\n",
-    "time_interval = '5m'"
+    "time_interval = '1h'"
    ]
   },
   {
