fixed the guider notebook

--- a/Run7/GuiderData.ipynb
+++ b/Run7/GuiderData.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "88de1fae-fcae-4d69-9610-fbd014775b71",
    "metadata": {
     "execution": {
@@ -32,15 +32,7 @@
      "shell.execute_reply.started": "2025-08-27T00:00:54.866718Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:botocore.credentials:Found credentials in shared credentials file: /sdf/home/y/youtsumi/.lsst/aws-credentials.ini\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lsst.resources import ResourcePath\n",
     "from astropy.io import fits\n",
@@ -51,6 +43,7 @@
     "from astropy.stats import mad_std\n",
     "from lsst.daf.butler import Butler\n",
     "from astropy.io import fits\n",
+    "import json\n",
     "\n",
     "butler = Butler('embargo', collections=['LSSTCam/raw/all', 'LSSTCam/raw/guider'])\n",
     "detector=list(butler.registry.queryDimensionRecords(\"detector\",instrument='LSSTCam',where=f\"detector.full_name='{sensor}'\"))[0].id\n",
@@ -1464,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "0180904b-f998-435b-b210-a826cc740a54",
    "metadata": {
     "execution": {
@@ -1475,11 +1468,146 @@
      "shell.execute_reply.started": "2025-08-27T00:01:03.513569Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"__CONTENT__\": \"metadata\",\n",
+      "  \"SIMPLE\": true,\n",
+      "  \"BITPIX\": 8,\n",
+      "  \"NAXIS\": 0,\n",
+      "  \"EXTEND\": true,\n",
+      "  \"BINX\": 1,\n",
+      "  \"BINY\": 1,\n",
+      "  \"CCDGAIN\": 1.0,\n",
+      "  \"CCDNOISE\": 10.0,\n",
+      "  \"DETSIZE\": \"[1:4072,1:4000]\",\n",
+      "  \"DATE\": \"2025-11-04T08:05:30.540\",\n",
+      "  \"MJD\": 60983.337159026414,\n",
+      "  \"IMGTYPE\": \"UNKNOWN\",\n",
+      "  \"OBSID\": \"MC_O_20251103_000421\",\n",
+      "  \"BUNIT\": \"adu\",\n",
+      "  \"TIMESYS\": \"TAI\",\n",
+      "  \"INSTRUME\": \"lsstCam\",\n",
+      "  \"TELESCOP\": \"Simonyi Survey Telescope\",\n",
+      "  \"OBS-LONG\": -70.749417,\n",
+      "  \"OBS-LAT\": -30.244639,\n",
+      "  \"OBS-ELEV\": 2663.0,\n",
+      "  \"OBSGEO-X\": 1818938.94,\n",
+      "  \"OBSGEO-Y\": -5208470.95,\n",
+      "  \"OBSGEO-Z\": -3195172.08,\n",
+      "  \"RA\": 60.21231990795632,\n",
+      "  \"DEC\": -25.935993133890307,\n",
+      "  \"RASTART\": 60.21328314057507,\n",
+      "  \"DECSTART\": -25.93597023145745,\n",
+      "  \"RAEND\": 60.21309461596739,\n",
+      "  \"DECEND\": -25.93596964740378,\n",
+      "  \"ROTPA\": 16.25601295985961,\n",
+      "  \"ROTCOORD\": \"sky\",\n",
+      "  \"HASTART\": 2.26418826255069,\n",
+      "  \"ELSTART\": 59.852650372723,\n",
+      "  \"AZSTART\": -90.0687729255384,\n",
+      "  \"AMSTART\": 1.156078481541616,\n",
+      "  \"HAEND\": 2.2728216697437937,\n",
+      "  \"ELEND\": 59.7404745515577,\n",
+      "  \"AZEND\": -90.1334977313716,\n",
+      "  \"AMEND\": 1.157389120922276,\n",
+      "  \"TRACKSYS\": \"RADEC\",\n",
+      "  \"RADESYS\": \"FK5\",\n",
+      "  \"FOCUSZ\": -1.1236611650316115,\n",
+      "  \"OBJECT\": null,\n",
+      "  \"VIGNETTE\": \"NO\",\n",
+      "  \"VIGN_MIN\": \"NO\",\n",
+      "  \"CAMCODE\": \"MC\",\n",
+      "  \"CONTRLLR\": \"O\",\n",
+      "  \"DAYOBS\": \"20251103\",\n",
+      "  \"SEQNUM\": 421,\n",
+      "  \"PROGRAM\": \"BLOCK-T614\",\n",
+      "  \"REASON\": \"AOS_stability_test\",\n",
+      "  \"TSTAND\": \"TMAMCv1_SUM\",\n",
+      "  \"CCD_MANU\": \"ITL\",\n",
+      "  \"CCD_TYPE\": \"3800C\",\n",
+      "  \"CCDSLOT\": \"SG1\",\n",
+      "  \"RAFTBAY\": \"R00\",\n",
+      "  \"FIRMWARE\": \"2139210d\",\n",
+      "  \"PLATFORM\": \"lsstcam\",\n",
+      "  \"CONTNUM\": \"10000\",\n",
+      "  \"DAQVERS\": \"R5-V13.9 2025-06-11T16:27:01Z (990e4571)\",\n",
+      "  \"DAQPART\": \"guider\",\n",
+      "  \"LSST_NUM\": \"ITL-3800C-337\",\n",
+      "  \"CCD_SERN\": \"24378\",\n",
+      "  \"REBNAME\": \"LCA-13540-05\",\n",
+      "  \"RAFTNAME\": \"LCA-10692_CRTM-0002\",\n",
+      "  \"FPVERS\": \"1.3.4-SNAPSHOT\",\n",
+      "  \"IHVERS\": \"1.1.13-SNAPSHOT\",\n",
+      "  \"FILTBAND\": \"i\",\n",
+      "  \"FILTER\": \"i_39\",\n",
+      "  \"FILTPOS\": 305.0,\n",
+      "  \"FILTSLOT\": 1,\n",
+      "  \"SHUTTIME\": 30.000048398971558,\n",
+      "  \"AIRTEMP\": 4.199999809265137,\n",
+      "  \"PRESSURE\": 74000.0,\n",
+      "  \"HUMIDITY\": 26.950000762939453,\n",
+      "  \"WINDSPD\": 16.596599578857422,\n",
+      "  \"WINDDIR\": 11.245171546936035,\n",
+      "  \"SEEING\": 1.4197254180908203,\n",
+      "  \"HEADVER\": 101,\n",
+      "  \"FILENAME\": \"MC_O_20251103_000421_R00_SG1_guider.fits\",\n",
+      "  \"HIERARCH.STUTTER.ROWS\": null,\n",
+      "  \"HIERARCH.STUTTER.DELAY\": null,\n",
+      "  \"HIERARCH.STUTTER.NSHIFTS\": null,\n",
+      "  \"HIERARCH.SHUTTER.OPEN.STARTTIME.TAI.ISOT\": \"2025-11-04T08:06:07.136\",\n",
+      "  \"HIERARCH.SHUTTER.OPEN.STARTTIME.TAI.MJD\": 60983.3375825868,\n",
+      "  \"HIERARCH.SHUTTER.OPEN.SIDE\": \"PLUSX\",\n",
+      "  \"HIERARCH.SHUTTER.OPEN.MODEL\": \"ThreeJerksModelv1\",\n",
+      "  \"HIERARCH.SHUTTER.OPEN.HALLSENSORFIT.MODELSTARTTIME\": 0.001125114713096929,\n",
+      "  \"HIERARCH.SHUTTER.OPEN.HALLSENSORFIT.PIVOTPOINT1\": 0.22337762737101022,\n",
+      "  \"HIERARCH.SHUTTER.OPEN.HALLSENSORFIT.PIVOTPOINT2\": 0.6779305145868406,\n",
+      "  \"HIERARCH.SHUTTER.OPEN.HALLSENSORFIT.JERK0\": 33247.70059129513,\n",
+      "  \"HIERARCH.SHUTTER.OPEN.HALLSENSORFIT.JERK1\": -32830.5545426987,\n",
+      "  \"HIERARCH.SHUTTER.OPEN.HALLSENSORFIT.JERK2\": 34741.327694967884,\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.STARTTIME.TAI.ISOT\": \"2025-11-04T08:06:37.136\",\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.STARTTIME.TAI.MJD\": 60983.33792981459,\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.SIDE\": \"MINUSX\",\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.MODEL\": \"ThreeJerksModelv1\",\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.HALLSENSORFIT.MODELSTARTTIME\": 0.0006549736152137618,\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.HALLSENSORFIT.PIVOTPOINT1\": 0.22328436541485075,\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.HALLSENSORFIT.PIVOTPOINT2\": 0.6793666743895741,\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.HALLSENSORFIT.JERK0\": 33243.401181448186,\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.HALLSENSORFIT.JERK1\": -32774.151721301234,\n",
+      "  \"HIERARCH.SHUTTER.CLOSE.HALLSENSORFIT.JERK2\": 35540.17657126863,\n",
+      "  \"ROICOL\": 56,\n",
+      "  \"ROIROW\": 800,\n",
+      "  \"ROICOLS\": 400,\n",
+      "  \"ROIROWS\": 400,\n",
+      "  \"ROISEG\": \"Segment00\",\n",
+      "  \"GDSSEQ\": 27497,\n",
+      "  \"GDSSTART\": \"2025-11-04T08:06:07.048\",\n",
+      "  \"ROIUNDRC\": 0,\n",
+      "  \"ROIOVERC\": 0,\n",
+      "  \"ROIOVERR\": 0,\n",
+      "  \"ROIFLUSH\": 2,\n",
+      "  \"ROISPLIT\": false,\n",
+      "  \"ROICCDTY\": 0,\n",
+      "  \"ROIMILLI\": 200,\n",
+      "  \"N_STAMPS\": 50,\n",
+      "  \"HIERARCH.HAS_ARCHIVE\": false,\n",
+      "  \"HAS_MASK\": false,\n",
+      "  \"HIERARCH.HAS_VARIANCE\": false,\n",
+      "  \"STAMPCLS\": \"lsst.meas.algorithms.Stamps\",\n",
+      "  \"CHECKSUM\": \"IXWiLVVZIVVfIVVZ\",\n",
+      "  \"DATASUM\": \"0\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
-    "#with s3file.open(mode=\"r\") as f:\n",
-    "#    j=json.load(f)\n",
-    "#print(json.dumps(j,indent=2))"
+    "rp = ResourcePath(table[1]['s3path'].geturl().replace('.fits','.json'))\n",
+    "with rp.open(mode=\"r\") as f:\n",
+    "    j=json.load(f)\n",
+    "print(json.dumps(j,indent=2))"
    ]
   },
   {
