--- a/Run7/GuiderData.ipynb
+++ b/Run7/GuiderData.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "88de1fae-fcae-4d69-9610-fbd014775b71",
    "metadata": {
     "execution": {
@@ -32,7 +32,15 @@
      "shell.execute_reply.started": "2025-08-27T00:00:54.866718Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:botocore.credentials:Found credentials in shared credentials file: /sdf/home/y/youtsumi/.lsst/aws-credentials.ini\n"
+     ]
+    }
+   ],
    "source": [
     "from lsst.resources import ResourcePath\n",
     "from astropy.io import fits\n",
@@ -68,7 +76,6 @@
     "def examineone(expid,sensor):\n",
     "    detector=list(butler.registry.queryDimensionRecords(\"detector\",instrument='LSSTCam',where=f\"detector.full_name='{sensor}'\"))[0].id\n",
     "    path=butler.getURI('guider_raw',instrument='LSSTCam',detector=detector,exposure=expid).geturl()\n",
-    "    print(path)\n",
     "    rp=ResourcePath(path)\n",
     "    with rp.open(mode=\"rb\") as f:\n",
     "        hdu_list = fits.open(f)\n",
@@ -122,24 +129,10 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s3://embargo@rubin-summit/LSSTCam/20251103/MC_O_20251103_000421/MC_O_20251103_000421_R00_SG0_guider.fits\n",
-      "s3://embargo@rubin-summit/LSSTCam/20251103/MC_O_20251103_000421/MC_O_20251103_000421_R00_SG1_guider.fits\n",
-      "s3://embargo@rubin-summit/LSSTCam/20251103/MC_O_20251103_000421/MC_O_20251103_000421_R04_SG0_guider.fits\n",
-      "s3://embargo@rubin-summit/LSSTCam/20251103/MC_O_20251103_000421/MC_O_20251103_000421_R04_SG1_guider.fits\n",
-      "s3://embargo@rubin-summit/LSSTCam/20251103/MC_O_20251103_000421/MC_O_20251103_000421_R40_SG0_guider.fits\n",
-      "s3://embargo@rubin-summit/LSSTCam/20251103/MC_O_20251103_000421/MC_O_20251103_000421_R40_SG1_guider.fits\n",
-      "s3://embargo@rubin-summit/LSSTCam/20251103/MC_O_20251103_000421/MC_O_20251103_000421_R44_SG0_guider.fits\n",
-      "s3://embargo@rubin-summit/LSSTCam/20251103/MC_O_20251103_000421/MC_O_20251103_000421_R44_SG1_guider.fits\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div><i>Table length=8</i>\n",
-       "<table id=\"table139935740240016\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140397773821936\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>basename</th><th>noise</th><th>std(noise)</th><th>Hz</th></tr></thead>\n",
        "<thead><tr><th>str40</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>MC_O_20251103_000421_R00_SG0_guider.fits</td><td>8.984569444143949</td><td>0.46032351690287276</td><td>1.6759191369016444</td></tr>\n",
@@ -206,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f45541c32c0>"
+       "<matplotlib.legend.Legend at 0x7fb0e76fbf50>"
       ]
      },
      "execution_count": 5,
@@ -250,7 +243,7 @@
      "output_type": "stream",
      "text": [
       "INFO:matplotlib.animation:Animation.save using <class 'matplotlib.animation.FFMpegWriter'>\n",
-      "INFO:matplotlib.animation:MovieWriter._run: running command: ffmpeg -f rawvideo -vcodec rawvideo -s 640x480 -pix_fmt rgba -framerate 8.333333333333334 -loglevel error -i pipe: -vcodec h264 -pix_fmt yuv420p -y /lscratch/youtsumi/tmpf3fs16dd/temp.m4v\n"
+      "INFO:matplotlib.animation:MovieWriter._run: running command: ffmpeg -f rawvideo -vcodec rawvideo -s 640x480 -pix_fmt rgba -framerate 8.333333333333334 -loglevel error -i pipe: -vcodec h264 -pix_fmt yuv420p -y /lscratch/youtsumi/tmp8ugt8aa1/temp.m4v\n"
      ]
     },
     {
@@ -1397,7 +1390,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c440e05269f4a62beb531468a26af6c",
+       "model_id": "8f17f5830bff4199be69cdff8b92253a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1457,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0180904b-f998-435b-b210-a826cc740a54",
    "metadata": {
     "execution": {
@@ -1609,22 +1602,6 @@
     "    j=json.load(f)\n",
     "print(json.dumps(j,indent=2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b04f6965-b9b0-4135-affb-137011eca112",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77561bb4-a579-4b73-9af6-e2abba97e366",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
