fixed a few issues

--- a/Run7/FitsHeader.ipynb
+++ b/Run7/FitsHeader.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "45002735-c850-40bc-853a-4655982095b0",
    "metadata": {
     "execution": {
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "butler = Butler('embargo', collections=['LSSTCam/raw/all', 'LSSTCam/calib/unbounded'])"
+    "butler = Butler('embargo', collections=['LSSTCam/raw/all'])"
    ]
   },
   {
